implement hash table (no concurrency support yet)
Signed-off-by: Miaofei <ameision@hotmail.com>

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -2,6 +2,7 @@ include(GNUInstallDirs)
 
 add_library(key_value_store SHARED
     file_backed_buffer.cpp
+    hash_table.cpp
 )
 
 set_target_properties(key_value_store
